<resources>
    <string name="app_name">pagination</string>
    <string name="title">We are the founders of the aavegotchi protocol,the original DeFi+NFT</string>
    <string name="description">We are the founders of the aavegotchi protocol,the original DeFi+NFT We are the founders of the aavegotchi protocol,the original DeFi+NFT</string>
    <string name="time">Mar 02,2022 00:13:15</string>
    <string name="no_image_txt">No Image Available</string>
    <string name="ups">UPs</string>
</resources>