<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/ic_launcher_foreground"
            android:visibility="visible"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/tv_no_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_image_txt"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="@color/gray"/>
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/description"
            android:textSize="15sp"
            android:textColor="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">
        <TextView
            android:id="@+id/tv_created"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/time"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textColor="@color/gray"/>
            <TextView
                android:id="@+id/tv_ups"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/ups"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="right"
                android:textColor="@color/gray"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>


